RESOLVED FIXED230282
Fix -Wredundant-move warnings
https://bugs.webkit.org/show_bug.cgi?id=230282
Summary Fix -Wredundant-move warnings
Michael Catanzaro
Reported 2021-09-14 15:59:25 PDT
Fix -Wredundant-move warnings Hi Alex, I'm CCing you because you introduced one of these in 241547@main, and it technically requires owner approval to fix....
Attachments
Patch (2.22 KB, patch)
2021-09-14 16:00 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2021-09-14 16:00:28 PDT
Michael Catanzaro
Comment 2 2021-09-14 16:01:47 PDT
(BTW the difference here is: GCC warns whenever a WTFMove is redundant in return values, whereas clang only warns when a WTFMove actually prevents copy elision from happening. I don't know the differences between the two cases.)
Michael Catanzaro
Comment 3 2021-09-14 16:04:13 PDT
Comment on attachment 438185 [details] Patch Thanks.
EWS
Comment 4 2021-09-14 16:48:01 PDT
Committed r282421 (241680@main): <https://commits.webkit.org/241680@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 438185 [details].
Radar WebKit Bug Importer
Comment 5 2021-09-14 16:48:22 PDT
Note You need to log in before you can comment on or make changes to this bug.