Fix -Wredundant-move warnings https://bugs.webkit.org/show_bug.cgi?id=230282

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-09-14
Reviewed by Alex Christensen.

* Platform/IPC/ArgumentCoders.cpp:
(IPC::ArgumentCoder<CString>::decode):
* Shared/soup/WebCoreArgumentCodersSoup.cpp:
(IPC::ArgumentCoder<CertificateInfo>::decode):

Canonical link: https://commits.webkit.org/241680@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282421 268f45cc-cd09-0410-ab3c-d52691b4dbfc